[gd_scene load_steps=29 format=2]

[ext_resource path="res://Font/45Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://img Pokemon/img Pokedex/Graphic/ChoixTexture.png" type="Texture" id=2]
[ext_resource path="res://img Pokemon/img Pokedex/Graphic/ChoixTextureEntre.png" type="Texture" id=3]
[ext_resource path="res://img Pokemon/All Pokemon/Front/1.png" type="Texture" id=5]
[ext_resource path="res://img Pokemon/img Pokedex/Graphic/cadre.png" type="Texture" id=6]
[ext_resource path="res://Font/20Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://img Pokemon/All Pokemon/Front/2.png" type="Texture" id=8]
[ext_resource path="res://img Pokemon/All Pokemon/Front/3.png" type="Texture" id=9]
[ext_resource path="res://img Pokemon/All Pokemon/Front/4.png" type="Texture" id=10]
[ext_resource path="res://img Pokemon/All Pokemon/Front/5.png" type="Texture" id=11]
[ext_resource path="res://img Pokemon/All Pokemon/Front/6.png" type="Texture" id=12]
[ext_resource path="res://img Pokemon/All Pokemon/Front/7.png" type="Texture" id=13]
[ext_resource path="res://img Pokemon/All Pokemon/Front/9.png" type="Texture" id=14]
[ext_resource path="res://img Pokemon/All Pokemon/Front/8.png" type="Texture" id=15]
[ext_resource path="res://img Pokemon/All Pokemon/Front/10.png" type="Texture" id=16]
[ext_resource path="res://img Pokemon/All Pokemon/Front/11.png" type="Texture" id=17]
[ext_resource path="res://img Pokemon/All Pokemon/Front/12.png" type="Texture" id=18]
[ext_resource path="res://img Pokemon/All Pokemon/Front/13.png" type="Texture" id=19]
[ext_resource path="res://img Pokemon/All Pokemon/Front/14.png" type="Texture" id=20]
[ext_resource path="res://img Pokemon/All Pokemon/Front/15.png" type="Texture" id=21]
[ext_resource path="res://img Pokemon/All Pokemon/Front/16.png" type="Texture" id=22]
[ext_resource path="res://img Pokemon/All Pokemon/Front/17.png" type="Texture" id=23]
[ext_resource path="res://img Pokemon/All Pokemon/Front/18.png" type="Texture" id=24]
[ext_resource path="res://img Pokemon/All Pokemon/Front/19.png" type="Texture" id=25]
[ext_resource path="res://img Pokemon/All Pokemon/Front/20.png" type="Texture" id=26]
[ext_resource path="res://img Pokemon/img Pokedex/Graphic/OutsideButton2.png" type="Texture" id=27]
[ext_resource path="res://img Pokemon/img Pokedex/Graphic/OutsideButton.png" type="Texture" id=28]
[ext_resource path="res://GUI/Pokedex/Pokedex.gd" type="Script" id=29]

[node name="Pokedex" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphic" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Graphic"]
margin_right = 1026.0
margin_bottom = 60.0
color = Color( 0.752941, 0.690196, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Graphic"]
margin_top = 540.0
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0.752941, 0.690196, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListePokemon" type="Label" parent="Graphic"]
margin_left = 369.61
margin_top = 8.10803
margin_right = 694.61
margin_bottom = 53.108
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "LISTE POKEMON"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlChoix" type="Label" parent="Graphic"]
margin_left = 768.504
margin_top = 548.807
margin_right = 885.504
margin_bottom = 593.807
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "CHOIX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlChoixTexture" type="TextureRect" parent="Graphic"]
margin_left = 718.56
margin_top = 552.448
margin_right = 755.56
margin_bottom = 589.448
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlOk" type="Label" parent="Graphic"]
margin_left = 960.743
margin_top = 548.341
margin_right = 1014.74
margin_bottom = 593.341
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OK"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlOkTexture" type="TextureRect" parent="Graphic"]
margin_left = 914.956
margin_top = 556.0
margin_right = 948.956
margin_bottom = 586.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All Pokemon" type="ScrollContainer" parent="."]
margin_left = 13.0
margin_top = 70.0
margin_right = 1013.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="All Pokemon"]
margin_right = 920.0
margin_bottom = 612.0

[node name="Pokemon1" type="HBoxContainer" parent="All Pokemon/VBoxContainer"]
margin_right = 920.0
margin_bottom = 150.0

[node name="Bulbizarre" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Bulbizarre" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Bulbizarre"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Bulbizarre"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BULBIZARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Herbizarre" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Herbizarre" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Herbizarre"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Herbizarre"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HERBIZARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Florizarre" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Florizarre" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Florizarre"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Florizarre"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FLORIZARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salameche" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Salameche" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Salameche"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Salameche"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SALAMECHE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reptincel" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Reptincel" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Reptincel"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Reptincel"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REPTINCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dracaufeu" type="Control" parent="All Pokemon/VBoxContainer/Pokemon1"]
margin_left = 770.0
margin_right = 920.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Dracaufeu" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon1/Dracaufeu"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon1/Dracaufeu"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DRACAUFEU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon2" type="HBoxContainer" parent="All Pokemon/VBoxContainer"]
margin_top = 154.0
margin_right = 920.0
margin_bottom = 304.0

[node name="Carapuce" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Carapuce" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Carapuce"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 13 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Carapuce"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CARAPUCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carabaffe" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Carabaffe" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Carabaffe"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 15 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Carabaffe"]
margin_left = 10.0
margin_top = 126.0
margin_right = 114.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CARABAFFE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tortank" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Tortank" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Tortank"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 14 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Tortank"]
margin_left = 28.8551
margin_top = 124.603
margin_right = 112.855
margin_bottom = 144.603
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TORTANK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chenipan" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Chenipan" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Chenipan"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 16 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Chenipan"]
margin_left = 23.2353
margin_top = 125.37
margin_right = 111.235
margin_bottom = 145.37
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHENIPAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chrysacier" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Chrysacier" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Chrysacier"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 17 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Chrysacier"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHRYSACIER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Papilusion" type="Control" parent="All Pokemon/VBoxContainer/Pokemon2"]
margin_left = 770.0
margin_right = 920.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Papilusion" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon2/Papilusion"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 18 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon2/Papilusion"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAPILUSION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon3" type="HBoxContainer" parent="All Pokemon/VBoxContainer"]
margin_top = 308.0
margin_right = 920.0
margin_bottom = 458.0

[node name="Aspicot" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Aspicot" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Aspicot"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 19 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Aspicot"]
margin_left = 34.9198
margin_top = 123.827
margin_right = 110.92
margin_bottom = 143.827
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ASPICOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coconfort" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Coconfort" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Coconfort"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 20 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Coconfort"]
margin_left = 27.064
margin_top = 126.569
margin_right = 121.064
margin_bottom = 146.569
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "COCNFORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dardagnan" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Dardagnan" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Dardagnan"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 21 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Dardagnan"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DARDAGNAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roucool" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Roucool" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Roucool"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 22 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Roucool"]
margin_left = 23.9318
margin_top = 126.0
margin_right = 105.932
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ROUCOOL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roucoups" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Roucoups" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Roucoups"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 23 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Roucoups"]
margin_left = 14.6755
margin_top = 124.53
margin_right = 110.675
margin_bottom = 144.53
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ROUCOUPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roucarnage" type="Control" parent="All Pokemon/VBoxContainer/Pokemon3"]
margin_left = 770.0
margin_right = 920.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Roucanarge" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon3/Roucarnage"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 24 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon3/Roucarnage"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ROUCARNAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon4" type="HBoxContainer" parent="All Pokemon/VBoxContainer"]
margin_top = 462.0
margin_right = 920.0
margin_bottom = 612.0

[node name="Rattata" type="Control" parent="All Pokemon/VBoxContainer/Pokemon4"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Rattata" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon4/Rattata"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 25 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon4/Rattata"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BULBIZARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rattatac" type="Control" parent="All Pokemon/VBoxContainer/Pokemon4"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Rattatac" type="TextureButton" parent="All Pokemon/VBoxContainer/Pokemon4/Rattatac"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 26 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="All Pokemon/VBoxContainer/Pokemon4/Rattatac"]
margin_left = 10.0
margin_top = 126.0
margin_right = 120.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HERBIZARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutsideButton" type="TextureButton" parent="."]
margin_left = 931.645
margin_top = 0.465059
margin_right = 1025.64
margin_bottom = 60.4651
texture_normal = ExtResource( 27 )
texture_hover = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description1" type="TextureButton" parent="."]
visible = false
margin_top = 60.0
margin_right = 1026.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description2" type="TextureButton" parent="."]
visible = false
margin_top = 60.0
margin_right = 1026.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Bulbizarre/Bulbizarre" to="." method="_on_Bulbizarre_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Herbizarre/Herbizarre" to="." method="_on_Herbizarre_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Florizarre/Florizarre" to="." method="_on_Florizarre_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Salameche/Salameche" to="." method="_on_Salameche_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Reptincel/Reptincel" to="." method="_on_Reptincel_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon1/Dracaufeu/Dracaufeu" to="." method="_on_Dracaufeu_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Carapuce/Carapuce" to="." method="_on_Carapuce_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Carabaffe/Carabaffe" to="." method="_on_Carabaffe_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Tortank/Tortank" to="." method="_on_Tortank_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Chenipan/Chenipan" to="." method="_on_Chenipan_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Chrysacier/Chrysacier" to="." method="_on_Chrysacier_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon2/Papilusion/Papilusion" to="." method="_on_Papilusion_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Aspicot/Aspicot" to="." method="_on_Aspicot_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Coconfort/Coconfort" to="." method="_on_Coconfort_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Dardagnan/Dardagnan" to="." method="_on_Dardagnan_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Roucool/Roucool" to="." method="_on_Roucool_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Roucoups/Roucoups" to="." method="_on_Roucoups_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon3/Roucarnage/Roucanarge" to="." method="_on_Roucanarge_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon4/Rattata/Rattata" to="." method="_on_Rattata_pressed"]
[connection signal="pressed" from="All Pokemon/VBoxContainer/Pokemon4/Rattatac/Rattatac" to="." method="_on_Rattatac_pressed"]
[connection signal="pressed" from="OutsideButton" to="." method="_on_OutsideButton_pressed"]
[connection signal="pressed" from="Description1" to="." method="_on_Description1_pressed"]
[connection signal="pressed" from="Description2" to="." method="_on_Description2_pressed"]
